10-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: helloworld
    service: frontend
    version: blue
    shard: blue
    doodle-version: v0.99.01
  name: frontend
  namespace: supreme-doodle
spec:
  replicas: 1
  selector:
    matchLabels:
      application: helloworld
      service: frontend
      version: blue
      shard: blue
  template:
    metadata:
      labels:
        application: helloworld
        service: frontend
        version: blue
        shard: blue
    spec:
      containers:
      - name: frontend
        # image: public.ecr.aws/z4m0n1r4/frontend
        image: ghcr.io/scrogatl/doodle-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: application
          protocol: TCP
