frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: helloworld
    service: frontend
    version: blue
    shard: blue
  name: frontend-blue
  namespace: supreme-doodle
spec:
  replicas: 1
  selector:
    matchLabels:
      application: helloworld
      service: frontend
      version: blue
      shard: blue
  template:
    metadata:
      labels:
        application: helloworld
        service: frontend
        version: blue
        shard: blue
    spec:
      containers:
      - name: frontend
        # image: public.ecr.aws/z4m0n1r4/frontend
        image: ghcr.io/scrogatl/doodle-loadgen:latest
        imagePullPolicy: Always
      
        ports:
        - containerPort: 5000
          name: application
          protocol: TCP
      imagePullSecrets:
      - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: supreme-doodle
spec: 
  selector:
    application: helloworld
    service: frontend  
  type: ClusterIP
  ports:
  - name: http
    # protocol: TCP
    appProtocol: http
    port: 5000
