30-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doodle-frontend
  namespace: supreme-doodle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /doodle
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
